2003-06-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* doc/options.imdoc: Fix to formatting. Fix spelling of origin.
	* PerlMagick/t/bzlib/read.t: Add test for reading BZipped file.
	* PerlMagick/t/subroutines.pl (testRead): Skip testing reads
	of compressed BLOBs because reading compressed BLOBs is not
	supported yet.
	* coders/bmp.c (ReadBMPImage): Only validate the file size value
	for compressed BMPs.
	* VisualMagick/wand, wand: First stab at building the Wand API
	under Visual C++.  Still does not build as a DLL.

2003-06-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/static.h: Add prototypes for RegisterXTRNImage and
	UnregisterXTRNImage.	
	* Makefile.am (DISTDIRS): Don't distribute the 'guide'
	subdirectory. It is available for checkout from CVS.
	* www: Utilities documentation is updated from <imdoc> masters.
	Formatting could be improved, but the content seems ok.
	* doc/environment.imdoc: New file to describe environment
	variables.
	* coders/cut.c (ReadCUTImage): Use MagickAllocateMemory and
	MagickFreeMemory rather than malloc and free.
	* doc/gmdoc2html: Add GraphicsMagick styling to utility web pages.
	* doc/Makefile: Additional documentation Makefile enhancements.
	* AUTHORS: New file to acknowledge significant contributors
	to the software. If an author is not listed here, please let
	us know.
	* configure.ac: test -a is not POSIX compliant.

2003-06-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* doc: Source documentation for 'gm' is now available via a 'doc'
	CVS module. A Makefile is provided which formats the
	documentation and installs it into the 'www' and 'utilities'
	subdirectories.

2003-06-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* wand: Added Magick Wand library available via
	-lGraphicsMagickWand and <wand/wand_api.h>. Use
	GraphicsMagickWand-config or GraphicsMagickWand.pc to obtain the
	compilation options required to use the library. Magick Wand is