@@ -53,6 +53,16 @@
 </tr>
 </table>
 <p>
+2003-06-24  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> PerlMagick/Magick.xs: Applied Dissolve composite operator fix
+        obtained from from John Cristy's ImageMagick which ensures that an
+        unused matte channel is set to Opaque, and uses this knowledge to
+        simplify the math.
+
+</UL>
+<p>
 2003-06-23  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
